execution worker for subprocesses
